--- a/aoc_2019/Cargo.toml
+++ b/aoc_2019/Cargo.toml
@@ -5,5 +5,7 @@ authors = ["Mitch Labrenz <MitchSLabrenz@gmail.com>"]
 edition = "2018"
 
 [dependencies]
+crossbeam = "0.7"
+itertools = "0.8"
 aoc-runner = "0.2"
 aoc-runner-derive ="0.2"
